// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 15,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 38,
  "paths": 0,
  "sha": "27069b4bf5cc799f",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 30,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 131,
  "paths": 0,
  "sha": "106420b44dd5839a",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 58,
  "paths": 0,
  "sha": "9b597522f61166cd",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 36,
  "circles": 0,
  "inputs": 21,
  "lengthBucket": 97,
  "paths": 0,
  "sha": "d68e2275cf4e93fb",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 47,
  "circles": 3,
  "inputs": 8,
  "lengthBucket": 126,
  "paths": 0,
  "sha": "b75b72defee8655b",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 35,
  "paths": 0,
  "sha": "40358f00b313595a",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "sha": "9333fc1bd1cafa7c",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 26,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 73,
  "paths": 0,
  "sha": "effebe28c060c3d9",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 94,
  "paths": 0,
  "sha": "bc889d94743fc8ec",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 53,
  "circles": 3,
  "inputs": 1,
  "lengthBucket": 127,
  "paths": 1,
  "sha": "fe0ca172f336d92a",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 39,
  "circles": 6,
  "inputs": 4,
  "lengthBucket": 148,
  "paths": 1,
  "sha": "478a9cd97cf32ef5",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 22,
  "circles": 0,
  "inputs": 1,
  "lengthBucket": 80,
  "paths": 0,
  "sha": "2381e721af8057ee",
  "svgs": 0,
}
`;
